<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ic_main_logo" />

    <TextView
        android:id="@+id/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:layout_marginTop="20dp"

        android:padding="4dp"
        android:text="@string/app_heading"
        android:textAlignment="center"
        android:textColor="#682FCD"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/GenerateQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Heading"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/generate_QR"
        android:textColor="#682FCD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ScanQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GenerateQR"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/scan_QR"
        android:textColor="#682FCD"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>